--- a/index.css
+++ b/index.css
@@ -61,9 +61,12 @@ h2 {
   height: 35%;
   width: 30%;
   background-color: aliceblue;
+  border-radius: 8px;
+  border: 1px solid white;
 }
 .tile:hover {
   height: 38%;
   width: 32%;
   background-color: aliceblue;
+  border: 3px solid white;
 }
