--- a/index.css
+++ b/index.css
@@ -43,6 +43,11 @@ h2 {
   padding: 5px;
   border-radius: 8px;
 }
+#tries:hover {
+  background-color: #4CAF50;
+  color: white;
+}
+
 #new {
   border-radius: 8px;
   height: 20px;
